// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Meetings/Webex Interstitial Meeting Loading 1`] = `
Array [
  <div
    className="wxc-interstitial-meeting"
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <div
      className="wxc-spinner"
      size={28}
      style={
        Object {
          "height": 28,
          "width": 28,
        }
      }
    />
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Meetings/Webex Interstitial Meeting Video Disabled 1`] = `
Array [
  <div
    className="wxc-interstitial-meeting"
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <div
      className="media-container"
      style={
        Object {
          "maxWidth": 176.77777777777777,
        }
      }
    >
      <div
        className="wxc-meeting-info interstitial-meeting-info"
      >
        <h2>
          Lunch and Learn
        </h2>
      </div>
      <div
        className="interstitial-media-container"
      >
        <div
          className="wxc-local-media interstitial-media wxc-local-media-no-media"
        >
          <div
            className="wxc-avatar"
          >
            <div
              className="avatar-content"
            >
              <svg
                className="placeholder placeholder-6"
                viewBox="0 0 40 40"
              >
                <text
                  x="50%"
                  y="50%"
                >
                  BG
                </text>
              </svg>
              <img
                alt="avatar"
                className=""
                onError={[Function]}
                src="./images/barbara.png"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Meetings/Webex Interstitial Meeting Video Enabled 1`] = `
Array [
  <div
    className="wxc-interstitial-meeting"
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <div
      className="media-container"
      style={
        Object {
          "maxWidth": 176.77777777777777,
        }
      }
    >
      <div
        className="wxc-meeting-info interstitial-meeting-info"
      >
        <h2>
          Weekly Backlog Grooming
        </h2>
      </div>
      <div
        className="interstitial-media-container"
      >
        <div
          className="wxc-local-media interstitial-media"
        >
          <video
            autoPlay={true}
            playsInline={true}
          />
        </div>
        <div
          className="wxc-banner wxc-banner--top"
        >
          My preview
        </div>
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;
